<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_soft"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_title"
        android:textColor="@color/primary_blue"
        android:textStyle="bold"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnLogout"/>

    <Button
        android:id="@+id/btnLogout"
        style="@style/RoundedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        app:layout_constraintTop_toTopOf="@id/tvHeader"
        app:layout_constraintBottom_toBottomOf="@id/tvHeader"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardAnalysis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/tvAnalysis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/section_today_analysis"
            android:textColor="@color/text_primary"/>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnAI"
        style="@style/RoundedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_ai_assistant"
        app:layout_constraintTop_toBottomOf="@id/cardAnalysis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnHistory"
        style="@style/RoundedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_history"
        app:layout_constraintTop_toBottomOf="@id/btnAI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fab_new_measure"
        app:srcCompat="@drawable/ic_send"
        app:tint="@color/white"
        app:backgroundTint="@color/primary_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
