<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <EditText
        android:id="@+id/etSystolic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/form_systolic"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etDiastolic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/form_diastolic"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/etSystolic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/etPulse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/form_pulse"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/etDiastolic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>

